SERVER-76822 Hold bucket mutex when accessing lock head for checking conflicting lock requests

(cherry picked from commit 881020bf20b0c0dcf1ac949aa8d9e6b7f62bd0a9)